# react-native-webassembly-runtime

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RISKS.md  babel.config.js  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml  react-native-webassembly-runtime.podspec  react-native.config.js  release-please-config.json  tsconfig.build.json  tsconfig.json
.github/actions/setup/: action.yml
.github/workflows/: ci.yml  harness.yml  release-please.yml
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/src/main/java/com/webassembly/: WebassemblyModule.java  WebassemblyPackage.java
cpp/: PATCHES.md  m3_compile.c  m3_config.h  m3_env.c  m3_env.h  m3_exec.h  m3_parse.c  react-native-webassembly.cpp  wasm3.h
example/: .gitignore  App.tsx  app.json  index.js  metro.config.js  package-lock.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/ios/: Podfile
example/ios/WebassemblyExample.xcodeproj/: project.pbxproj
example/scripts/: sync-kaspa.js
example/src/: extended-tests.ts  text-encoding.js
example/types/: globals.d.ts
harness/: JSCRuntime.cpp  binding-tests-entry.mjs  build.sh  env.js  grow-test-entry.mjs  grow-test-patched-entry.mjs  harness-entry.mjs  harness-rpc-entry.mjs  harness-sdk-entry.mjs  kaspa-keygen-test.mjs  kaspa-sdk-test.mjs  main.cpp  node-ref.mjs  node-sdk-ref.mjs  run-ci.sh
harness/spec/: prepare.sh  spec-runner-entry.mjs
ios/: Webassembly.h  Webassembly.mm
src/: NativeWebassembly.ts  index.tsx
src/polyfill/: core.ts  index.ts
(+4 files in other folders)
